2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/util.c (lastfm_url_encode): Minor updates.

	* TODO: Update TODO file.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/playlist.c (lastfm_track_destroy)
	(lastfm_track_set_cover_image)
	* src/protocol.c (lastfm_parse_track): Make all pointers in
	LastfmTrack const.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(renew_rsp_session): New function to renew a RSP session.
	(scrobble_track_thread)
	(set_nowplaying_thread): Renew the RSP session if it has expired.

	* src/scrobbler.c (rsp_set_nowplaying, rsp_scrobble): Detect
	correctly the BADSESSION response.

	Fixes: #2554

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/metadata.c
	(lastfm_get_user_track_tags)
	(lastfm_get_track_tags)
	* src/xmlrpc.c (tag_track, recommend_track): When dealing with
	album data, use the artist name from the album rather than the one
	from the track.

	* src/playlist.h
	* src/playlist.c (lastfm_track_destroy)
	* src/protocol.c (lastfm_parse_track): Store the artist's album
	rather than the album page URL.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_set_state): Enable the
	bookmarks menu when stopped or playing.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/util.h
	* src/util.c (lastfm_url_decode, lastfm_url_encode)
	* src/protocol.c (lastfm_parse_playlist): New functions to
	encode/decode using Last.fm URL format.

	* src/playlist.h
	* src/playlist.c (lastfm_track_destroy)
	* src/protocol.c (lastfm_parse_track): Store the album URL in
	LastfmTrack.

	* src/xmlrpc.c (tag_track): When tagging an album, get the artist
	name from the Last.fm album URL rather thant using the interpreter
	of the current song.

	* src/metadata.c (lastfm_get_track_tags): Use Last.fm URL encoding
	to get existing tags.

	Fixes: #2741

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.h