@@ -1,3 +1,14 @@
+2008-08-28  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/vgl-main-window.c
+	(vgl_main_window_init)
+	(vgl_main_window_destroy): Don't call
+	gtk_main_quit() after destroying the window, let the handler of
+	the "destroy" signal do it.
+
+	* src/controller.c (controller_run_app): Use a weak pointer to set
+	mainwin to NULL after it has been destroyed.
+
 2008-08-18  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/util.c (lastfm_url_encode): Minor updates.
